--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "A Gulp Project",
   "repository": {
     "type": "git",
-    "url": "?.git"
+    "url": "https://github.com/whariharan/workflows.git"
   },
   "author": "Hariharasudhan",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-coffee": "^2.3.3",
     "gulp-util": "^3.0.7"
   }
 }
